<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/conLayout"
    android:background="@drawable/background_all"
    android:layout_height="match_parent"
    tools:context=".AddCustomer">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ToolBar">

        <LinearLayout
            android:id="@+id/innerLinerListCus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etAddCusName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edit_text_background"
                android:elevation="5dp"
                android:hint="@string/editText_Name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"

                android:textSize="20dp" />

            <EditText
                android:id="@+id/etAddCusAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edit_text_background"
                android:elevation="5dp"
                android:hint="@string/editText_Age"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etAddCusGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edit_text_background"
                android:elevation="5dp"
                android:hint="@string/editText_Gender"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etAddCusJop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edit_text_background"
                android:elevation="5dp"
                android:hint="@string/editText_Jop"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etAddCusIdCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edit_text_background"
                android:elevation="5dp"
                android:hint="@string/editText_IdCard"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etAddCusPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edit_text_background"
                android:elevation="5dp"
                android:hint="@string/editText_PhoneNumber"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etAddCusAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_background"
                android:elevation="5dp"
                android:hint="@string/editText_Address"
                android:inputType="textLongMessage"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:textSize="20dp" />

            <Button
                android:id="@+id/saveCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/round_primary"
                android:elevation="5dp"
                android:onClick="cuSave"
                android:padding="10dp"
                android:text="save"
                android:textColor="@color/White"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>



    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>